implemented search blog by title and text
